# VermarineEngine

./: .gitignore  .gitmodules  Cargo.toml  README.md
Godot/: RPopsInstance.gdns  main.tscn  rpops-core.gdnlib
Godot/Scenes/: Rectangle.tscn
Rust/: Cargo.toml
Rust/rpops-core/: Cargo.toml
Rust/rpops-core/src/: lib.rs
Rust/rusty-pops/: Cargo.toml
Rust/rusty-pops/rpops-core/: Cargo.toml
Rust/rusty-pops/rpops-core/src/: components.rs  lib.rs  rpops_instance.rs  systems.rs
Rust/rusty-pops/rpops-engine/: Cargo.toml
Rust/rusty-pops/rpops-engine/examples/dodge-the-creeps-example/: Cargo.toml
Rust/rusty-pops/rpops-engine/examples/dodge-the-creeps-example/Godot/: DodgeTheCreepsInstance.gdns  Main.tscn  dodge-the-creeps.gdnlib  project.godot
Rust/rusty-pops/rpops-engine/examples/dodge-the-creeps-example/Godot/scenes/: Enemy.tscn  Player.tscn
Rust/rusty-pops/rpops-engine/examples/dodge-the-creeps-example/src/: lib.rs  renderables.rs  state.rs  systems.rs
Rust/rusty-pops/rpops-engine/src/: components.rs  engine.rs  lib.rs  models.rs
Rust/rusty-pops/rpops-shared/: Cargo.toml
Rust/rusty-pops/rpops-shared/src/: components.rs  lib.rs  models.rs
Rust/rusty-pops/src/: lib.rs
danger-noodle-example/: Cargo.toml
danger-noodle-example/Godot/: DangerNoodleInstance.gdns  Main.tscn  danger-noodle.gdnlib  project.godot
danger-noodle-example/Godot/scenes/: PlayerSegment.tscn  Tile.tscn
danger-noodle-example/src/: components.rs  instance.rs  renderables.rs  state.rs  systems.rs
dodge-the-creeps-example/: Cargo.toml
dodge-the-creeps-example/Godot/: project.godot
dodge-the-creeps-example/src/: instance.rs  lib.rs  renderables.rs  state.rs  systems.rs
getting-started-example/: Cargo.toml
getting-started-example/Godot/: GettingStartedExample.gdnlib  HelloWorld.gdns  main.tscn  project.godot
getting-started-example/Godot/scenes/: pause.tscn
getting-started-example/src/: lib.rs
rpops-core/: Cargo.toml
rpops-core/Godot/: main.tscn  project.godot
rpops-core/src/: models.rs  rpops_instance.rs
rusty-pops/: Cargo.toml
rusty-pops/dodge-the-creeps-example/: Cargo.toml
rusty-pops/dodge-the-creeps-example/Godot/: dodge-the-creeps.gdnlib
rusty-pops/dodge-the-creeps-example/src/: components.rs  renderables.rs  state.rs  systems.rs
rusty-pops/rpops-core/: Cargo.toml
rusty-pops/vermarine-engine/: Cargo.toml
scene-example/: Cargo.toml
scene-example/Godot/: SceneExampleInstance.gdns  project.godot  scene-example.gdnlib  ui.gd
scene-example/src/: instance.rs  lib.rs  renderables.rs  state.rs  systems.rs
vermarine-engine/: Cargo.toml
vermarine-engine/src/: components.rs  engine.rs  lib.rs  models.rs  state.rs
(+6 files in other folders)
