[package]
name = "danger-noodle-example"
version = "0.1.0"
authors = ["cdrch, supbscripter"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.8"
vermarine-engine = { path = "../vermarine-engine" }
