[package]
name = "dodge-the-creeps-example"
version = "0.1.0"
authors = ["supbscripter, cdrch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.8"
legion = { path = "../legion-ecs" }
vermarine-engine = { path = "../vermarine-engine" }
