[package]
name = "rusty-pops"
version = "0.1.0"
authors = ["supbscripter, cdrch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crossbeam-channel = "0.4.0"
gdnative = "0.8"
legion = { path = "../legion-ecs" }
rpops-core = { path = "./rpops-core" }

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    "rpops-core"
]