[package]
name = "rusty-pops"
version = "0.1.0"
authors = ["supbscripter, cdrch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[dependencies]
#rpops-core = { path = "./rpops-core" }

#[lib]
#crate-type = ["cdylib"]

[workspace]
members = [
    "rpops-core",
    "rpops-engine",
    "./rpops-engine/examples/dodge-the-creeps-example"
]