[package]
name = "rpops-engine"
version = "0.1.0"
authors = ["supbscripter, cdrch"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
gdnative = "0.8"
euclid = "0.20"
legion = { path = "../../legion-ecs"}
crossbeam-channel = "0.4.0"